api-manager/v/1.x/gatekeeper.adoc
= 网守增强安全参考

部署应用程序时，应用程序公开的API可能存在时间窗口，但为这些API指定的策略尚未应用，因此不受欢迎的流量可能会到达API .GateKeeper通过阻止API，直到所有策略都已检索并应用而没有错误。在此期间，API返回503状态。

== 网守的工作原理

在Mule运行时检测到您第一次部署了应用程序并且公开的API正在运行后，所有跟踪的侦听器（具有自动发现设置的流）都会停止。 Gatekeeper阻止API并返回503（服务不可用）状态码，直到满足以下条件：

* 连接到API管理器。
下载* 策略。
* 策略已成功应用。

Mule Runtime然后在本地缓存所有策略。
 
要启用或禁用GateKeeper功能，您可以在具有不同安全级别的Mule `wrapper.conf`文件中配置以下属性：

物业名称：`anypoint.platform.gatekeeper`

GateKeeper功能默认情况下使用严格的安全级别启用。

== 安全级别

您可以配置这些安全级别以启用或禁用Gatekeeper功能。

=== 假

设置此值时，不应用安全性。在政策申请过程中，不受欢迎的流量可能会到达API。该值仅适用于向后兼容性。改用'禁用'。

=== 禁用

设置此值时，不应用安全性。在政策申请过程中，不受欢迎的流量可能会到达API。

=== 真

设置此值时，默认安全级别为严格。此值仅适用于向后兼容性。改用'严格'或'灵活'。

== 严格（默认）

设置此值时，GateKeeper安全性处于打开状态，并按照"How Gatekeeper Works."中的描述工作

如果Mule Runtime重新启动，API将被阻止返回503（服务不可用），直到再次满足"How Gatekeeper Works"中列出的条件。

如果API在API管理器中被删除，Gatekeeper将在下一个轮询周期中阻塞该API。如果Mule Runtime以集群模式运行，则主节点会在下一个轮询周期中阻止API并通知其他节点。

== 弹性

设置此值时，GateKeeper安全性处于打开状态，并按照"How Gatekeeper Works."中的描述工作

如果Mule Runtime重新启动，Gatekeeper将阻止该API，返回503（服务不可用）。 Mule Runtime首先检查它是否可以从API Manager检索策略，如果无法检索它们，它会检查本地缓存。如果API Manager和缓存都不可用，则API将保持阻塞状态，直到再次满足"How Gatekeeper Works"中列出的条件。

如果在API管理器中删除API，Gatekeeper会在下一个轮询周期中阻塞API。如果Mule Runtime以集群模式运行，则主节点将在下一个轮询周期中阻塞API，并通知其他节点。

== 另请参阅

*  link:/api-manager/v/1.x/gatekeeper-task[启用关守]
